feat(localblast): 添加BLAST软件配置管理和命令构建优化
- 在AreadyInstalledBlastSoftwareBean中添加数据库工具、Blastn和Blastp配置类
- 为BasicBlastnPanel和BasicBlastpPanel实现配置数据的实时加载和保存功能
- 将命令构建方式从StringBuilder改为安全的ProcessBuilder命令列表
- 为BasicModePanel添加数据库工具配置的双向绑定监听器
- 更新SequenceFilteringPanel使用新的配置管理机制
- 移除Util.splitCommandTokens方法并直接使用ProcessBuilder构造函数
- 为SoftwareDetectionPanel添加命令检测的安全执行机制